Removed color wheel.

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -20,7 +20,7 @@
         <h1>MonoChrome</h1>
         <div id="container">
             <canvas></canvas>
-            <img src="../icons/color-wheel-final2.png" style="left: 77px; top: 0px;">
+            <!-- img src="../icons/color-wheel-final2.png" style="left: 77px; top: 0px;"> -->
             <img src="../icons/placeholder2.jpeg" style="width:80px; height:80px; left:5px; bottom:0px;">
         </div>
         <div class="slide-container">
